<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12sp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:lottie_rawRes="@raw/anim3"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
         app:layout_constraintEnd_toEndOf="@id/tv_sure"
         app:layout_constraintStart_toStartOf="@id/tv_sure"
         app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yangi_zikr_qo_shish_uchun_iltimos"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="#707070"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animationView"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_t_pastgi_qismda_joylashga_list_bo_limiga_o_ting_n_t_t_t_t_t_va_kerakli_ma_lumotlarni_kiriting"
        android:fontFamily="@font/poppins_regular"
        android:textColor="#707070"
        app:layout_constraintTop_toBottomOf="@id/tv_sure"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:text="@string/ok"
        android:textSize="10sp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:fontFamily="@font/inter_extrabold"
        android:background="@drawable/spinner_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:textColor="#F8F8F7"/>










</androidx.constraintlayout.widget.ConstraintLayout>