<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".view.MainFragment">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_7"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageButton
        android:id="@+id/btn_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/acount"
        android:background="@drawable/button_selector"
        android:contentDescription="@string/theme_button"
        android:scaleType="centerInside"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/seek_bar"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/coin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/coin"
        android:scaleType="centerInside"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />


    <TextView
        android:id="@+id/tv_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_semibold"
        android:text="@string/reminder_0"
        android:textColor="#926841"
        android:textSize="14sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/coin"
        app:layout_constraintBottom_toBottomOf="@id/coin"
        app:layout_constraintStart_toEndOf="@id/coin"
        />


    <TextView
        android:id="@+id/tv_zikr_nomi"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_semibold"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:textColor="#603913"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_zikr_max_son"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_semibold"
        android:text="@string/reminder_1"
        android:textColor="#926841"
        app:layout_constraintTop_toBottomOf="@id/tv_zikr_nomi"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="257dp"
        android:layout_height="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:progress="0"
        android:max="100"
        android:thumb="@null"
        android:progressDrawable="@drawable/seekbar_custom"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_zikr_max_son"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/counter"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/counter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000000"
        android:textSize="25sp"
        android:textColor="#74C8C6C6"
        android:fontFamily="@font/digitalnumbers_regular"
        app:layout_constraintTop_toTopOf="@id/counter"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@id/btn_counter"
        app:layout_constraintStart_toStartOf="@id/counter"
        app:layout_constraintEnd_toEndOf="@id/counter"/>

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="25sp"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:fontFamily="@font/digitalnumbers_regular"
        app:layout_constraintTop_toTopOf="@id/counter"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@id/btn_counter"
        app:layout_constraintStart_toStartOf="@id/counter"
        app:layout_constraintEnd_toEndOf="@id/counter"/>


    <ImageButton
        android:id="@+id/btn_counter"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:background="@drawable/button_selector"
        android:contentDescription="@string/counter_button"
        android:layout_marginTop="115dp"
        app:layout_constraintTop_toTopOf="@id/counter"
        app:layout_constraintBottom_toBottomOf="@id/counter"
        app:layout_constraintStart_toStartOf="@id/counter"
        app:layout_constraintEnd_toEndOf="@id/counter"/>
<!--

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_counter"
        android:layout_width="94dp"
        android:layout_height="92dp"
        android:background="@drawable/button_bg"
        android:layout_marginTop="115dp"
        app:layout_constraintTop_toTopOf="@id/counter"
        app:layout_constraintBottom_toBottomOf="@id/counter"
        app:layout_constraintStart_toStartOf="@id/counter"
        app:layout_constraintEnd_toEndOf="@id/counter"/>-->


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/button_bg"
        android:layout_marginStart="120dp"
        app:layout_constraintTop_toTopOf="@id/counter"
        app:layout_constraintBottom_toBottomOf="@id/counter"
        app:layout_constraintStart_toStartOf="@id/counter"
        app:layout_constraintEnd_toEndOf="@id/counter"/>



    <ImageButton
        android:id="@+id/btn_voice"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/voice"
        android:background="@drawable/button_selector"

        android:scaleType="centerInside"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toEndOf="@id/btn_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/counter" />


    <ImageButton
        android:id="@+id/btn_statistic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button_selector"
        android:src="@drawable/statisc"
        android:scaleType="centerInside"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toStartOf="@id/btn_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/counter"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_list"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button2_bg"
        android:text="List"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/counter"
        app:layout_constraintEnd_toEndOf="@id/counter" />


<!--    <ImageButton-->
<!--        android:id="@+id/btn_theme"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:background="@drawable/button2_bg"-->
<!--        android:src="@drawable/vector"-->
<!--        android:contentDescription="Theme button"-->
<!--        android:scaleType="centerInside"-->
<!--        android:layout_marginStart="120dp"-->
<!--        android:layout_marginBottom="30dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="@id/counter"-->
<!--        app:layout_constraintEnd_toEndOf="@id/counter" />-->

</androidx.constraintlayout.widget.ConstraintLayout>